EKE development, client-server documentation

--- a/s_key/client.ini
+++ b/s_key/client.ini
@@ -6,3 +6,7 @@ secret = 602be1d23a61bd05dfc8c6d54fd56445
 n = 9050
 secret = 57d688b706014f254646c68991cea668
 
+[ziv]
+n = 7453
+secret = 919b65191167d77aa37976fe5d1d9f11
+
